# kcm_imchooser

./: CMakeLists.txt
po/: CMakeLists.txt  Messages.sh  kcm_imchooser.pot  zh_CN.po
src/: CMakeLists.txt
src/kcontrol/: CMakeLists.txt  improfile.cpp  improfile.h  improfilemodel.cpp  improfilemodel.h  kcm_imchooser.desktop  main.cpp  module.cpp  module.h  module.ui  profilegenerator.cpp  profilegenerator.h
src/kded/: CMakeLists.txt  imchooserstarter.cpp  imchooserstarter.desktop  imchooserstarter.h
